Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-58329

HiDPI Scaling (QT_SCALE_FACTOR set to > 1) doesn't work properly on non-primary displays in multi-monitor setups

XMLWordPrintable

      I'm running a dual 4k monitor KDE Plasma 5.8.5 Desktop in openSUSE Tumbleweed. With Screen Scaling set to 2 (i.e. QT_SCALE_FACTOR=2), Qt apps only work as they should when positioned on the primary display. Drop-down menus don't open properly for Qt apps positioned on the secondary display. As soon as I move the Qt App with non-functional menus back to the primary display, everything works as it should again.

      If I turn scaling off (QT_SCALE_FACTOR=1) everything works properly on both monitors.

      If I have scaling turned off in plasma, but launch an individual Qt app with a QT_SCALE_FACTOR=2 prefix, then that individual app exhibits the same issue of not working properly on the secondary display.

      If I switch which monitor is the primary, with scaling on, Qt Apps will switch which monitor they work on--always working only with whichever display is set to primary.

        1. screenshot-1.png
          screenshot-1.png
          23 kB
        2. qscreen.png
          qscreen.png
          244 kB
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            sorvig Morten Sørvig
            mournblade mournblade
            Votes:
            0 Vote for this issue
            Watchers:
            9 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes