Fix menu position when highdpi scaling

Certain display and scale factor configurations would
cause menus to pop up in incorrect locations or not
be shown at all.

This was due to QDesktopWidget::screenNumber() having
a toNativePixels(QRect, QWindow) call which requires
that QWindow::screen() returns the correct screen.

Break the circular dependency by converting coordinates
the other way for the intersection test: transform screen
geometry to device independent coordinates.

Task-number: QTBUG-58329
Change-Id: I5ff2a5b14296ddbf7d8ddca11420988aae6cc0bd
(cherry picked from commit 5e76cb16924a42cb020786f45cc3494dd5836c5c)
Reviewed-by: Friedemann Kleint <Friedemann.Kleint@qt.io>